# brainfuck-rs

./: Cargo.toml  LICENSE.md  README.md  index.html  input.bf
diagrams/: project.dio
examples/: move.bf  random.bf
pkg/: README.md  brainfuck.js  brainfuck_bg.js  brainfuck_bg.wasm  package.json
src/: hello-world.bfck.txt  lib.rs  main.rs
