[package]
name = "brainfuck-rs"
version = "0.1.0"
edition = "2021"
description = "A Brainfuck interpreter written in Rust"
repository = "https://github.com/ktfth/brainfuck-rs"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "brainfuck"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]